@@ -1,3 +1,15 @@
+2011-06-19  Keishi Hattori  <keishi@webkit.org>
+
+        Reviewed by Kent Tamura.
+
+        Clicking indeterminate checkbox should flip checkedness state
+        https://bugs.webkit.org/show_bug.cgi?id=62262
+
+        Test: fast/forms/checkbox-click-indeterminate.html
+
+        * html/CheckboxInputType.cpp:
+        (WebCore::CheckboxInputType::willDispatchClick): Changed to flip checked flag when indeterminate.
+
 2011-06-19  Adam Bergkvist  <adam.bergkvist@ericsson.com>
 
         Reviewed by Martin Robinson.
